`GET` single comics by number using server
Includes a search bar to find comic by number, which will later be refactored into its own component. 

Includes random comic button

--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,19 @@
     transform: rotate(360deg);
   }
 }
+
+.errorMsg {
+  color: red;
+  background-color: white;
+  max-width: 20%;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.comicSearch {
+  padding: 1rem;
+}
+
+input, button {
+  font-size: 1.5rem;
+}
