--- a/src/CommentArea/CommentArea.css
+++ b/src/CommentArea/CommentArea.css
@@ -1,6 +1,10 @@
 .comment {
     text-align: left;
     padding-left: 1rem;
+    background-color: rgb(223, 223, 223);
+    border-radius: 1rem;
+    border: 2px solid black;
+    margin: 1rem;
 }
 
 .commentArea {
