--- a/src/FavoritesArea/FavoritesArea.css
+++ b/src/FavoritesArea/FavoritesArea.css
@@ -1,3 +1,13 @@
 button {
     margin: 0.5rem;
 }
+
+.Favorite {
+    display: inline;
+}
+
+.favoriteItems {
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 40%;
+}
